--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Codementum Portfolio</title>
+    <title>Codementum {CM}</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <!-- Header -->
     <header>
       <div class="container header-container">
-        <div class="logo">Codementum<span class="logo-tag"> {CM}</span></div>
+        <div class="logo">Codementum<span class="logo-tag">{CM}</span></div>
         <nav>
-          <a href="#">Home</a>
-          <a href="#">About</a>
+          <a href="about.html">Home</a>
+          <a href="about">About</a>
           <a href="contact.html">Contact</a>
         </nav>
         <a
@@ -36,14 +36,7 @@
       <div class="sound-cards">
         <div class="card active">
           <h2>Fireplace</h2>
-          <div class="player">
-            <button class="play-btn">&#9658;</button>
-            <span class="time">4:23</span>
-            <div class="progress">
-              <div class="progress-bar" style="width: 30%"></div>
-            </div>
-            <span class="duration">16:20</span>
-          </div>
+          <div class="player"></div>
         </div>
         <div class="card">
           <h2>Forest</h2>
