--- a/about.html
+++ b/about.html
@@ -25,7 +25,12 @@
     <section class="about-hero">
       <div class="about-content">
         <div class="about-image">
-          <img src="assets/IMG_7393.jpg" alt="Chelsea cartoon avatar" />
+          <div class="avatar-wrapper">
+            <img
+              src="assets/ChatGPT Image Aug 5, 2025 at 04_55_18 PM.png"
+              alt="Chelsea cartoon avatar"
+            />
+          </div>
         </div>
 
         <div class="text">
