--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
       <div class="container header-container">
         <div class="logo">Codementum<span class="logo-tag">{CM}</span></div>
         <nav>
-          <a href="about.html">Home</a>
-          <a href="about">About</a>
+          <a href="index.html">Home</a>
+          <a href="about.html">About</a>
           <a href="contact.html">Contact</a>
         </nav>
         <a
