edited about page, made changes to nav bar

--- a/about.html
+++ b/about.html
@@ -12,15 +12,15 @@
   </head>
   <body class="about-page">
     <header>
-      <nav class="navbar">
-        <div class="logo">Codementum<span class="logo-tag">{CM}</span></div>
-        <ul class="nav-links">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
-        <a href="#" class="download-btn">Download</a>
-      </nav>
+      <div class="container">
+        <div class="logo">Codementum <span class="logo-tag">{CM}</span></div>
+        <nav class="nav-center">
+          <a href="index.html">Home</a>
+          <a href="about.html">About</a>
+          <a href="contact.html">Contact</a>
+        </nav>
+        <a href="resume.pdf" class="download-btn" target="_blank">Download</a>
+      </div>
     </header>
     <section class="about-hero">
       <div class="about-content">
@@ -35,7 +35,7 @@
 
         <div class="text">
           <h1>Hi, I’m Chelsea</h1>
-          <h2>Front-End Developer & Creative Thinker</h2>
+          <h2>Front-End Developer & Vibe Curator</h2>
           <p>
             I’m a software engineer with a creative edge, blending clean code
             with thoughtful design. I recently graduated with a degree in
