--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
     <!-- Header -->
     <header>
       <div class="container header-container">
-        <div class="logo">Codementum<span class="logo-tag">{CM}</span></div>
-        <nav>
+        <div class="logo">Codementum<span class="logo-tag"> {CM}</span></div>
+
+        <nav class="nav-center">
           <a href="index.html">Home</a>
           <a href="about.html">About</a>
           <a href="contact.html">Contact</a>
         </nav>
+
         <a
           href="/assets/ChelseaWatson_Resume.pdf"
           download="ChelseaWatson_Resume.pdf"
