--- a/contact.html
+++ b/contact.html
@@ -3,54 +3,227 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <title>Contact Chelsea</title>
+    <title>Contact | Codementum</title>
+    <link rel="stylesheet" href="styles.css" />
+    <style>
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+      }
+
+      body {
+        font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+        background-color: #fdf9ef;
+        color: #e45533;
+        line-height: 1.6;
+      }
+
+      /* NAVIGATION BAR */
+      header {
+        background-color: #fdf9ef;
+        border-bottom: 2px solid #e45533;
+      }
+
+      header .container {
+        max-width: 1200px;
+        margin: 0 auto;
+        padding: 1.5rem 1.5rem;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        position: relative;
+      }
+
+      .logo {
+        font-size: 1.8rem;
+        font-weight: 700;
+        color: #e45533;
+        flex: 1;
+      }
+
+      .logo-tag {
+        font-size: 0.9rem;
+        font-weight: 600;
+        color: #e45533;
+        margin-left: 0.25rem;
+        vertical-align: middle;
+        opacity: 0.7;
+      }
+
+      .nav-center {
+        position: absolute;
+        left: 50%;
+        transform: translateX(-50%);
+        display: flex;
+        gap: 1.5rem;
+      }
+
+      .nav-center a {
+        text-decoration: none;
+        color: #e45533;
+        font-weight: 500;
+        font-size: 1rem;
+      }
+
+      .btn {
+        background-color: #e45533;
+        color: #fff;
+        padding: 0.5rem 1rem;
+        border-radius: 8px;
+        text-decoration: none;
+        font-weight: bold;
+        font-size: 1rem;
+        white-space: nowrap;
+      }
+
+      /* CONTACT SECTION */
+      .contact-section {
+        display: flex;
+        justify-content: space-between;
+        padding: 6rem 4rem;
+        flex-wrap: wrap;
+      }
+
+      .contact-left {
+        flex: 1;
+        min-width: 300px;
+      }
+
+      .contact-left h1 {
+        font-size: 3rem;
+        margin-bottom: 1rem;
+        color: #e45533;
+      }
+
+      .contact-left p {
+        font-size: 1.125rem;
+        margin-bottom: 2rem;
+      }
+
+      .contact-right {
+        flex: 1;
+        min-width: 320px;
+        background-color: #fefcf5;
+        padding: 2rem;
+        border-radius: 12px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.05);
+      }
+
+      .contact-right h2 {
+        margin-bottom: 2rem;
+        font-size: 1.5rem;
+      }
+
+      form {
+        display: grid;
+        gap: 1rem;
+      }
+
+      input,
+      textarea {
+        padding: 0.75rem;
+        font-size: 1rem;
+        border: 1px solid #e45533;
+        border-radius: 6px;
+        background-color: #fffaf2;
+        font-family: inherit;
+      }
+
+      textarea {
+        min-height: 100px;
+        resize: vertical;
+      }
+
+      button {
+        padding: 0.75rem;
+        background-color: #e45533;
+        color: white;
+        font-weight: bold;
+        border: none;
+        border-radius: 6px;
+        cursor: pointer;
+        font-size: 1rem;
+        transition: background-color 0.3s;
+      }
+
+      button:hover {
+        background-color: #c74428;
+      }
+
+      @media (max-width: 768px) {
+        header .container {
+          flex-direction: column;
+          align-items: flex-start;
+        }
+
+        .nav-center {
+          position: static;
+          transform: none;
+          margin-top: 1rem;
+        }
+
+        .contact-section {
+          flex-direction: column;
+          gap: 3rem;
+          padding: 4rem 2rem;
+        }
+
+        .contact-left h1 {
+          font-size: 2.5rem;
+          text-align: center;
+        }
+
+        .contact-left p {
+          text-align: center;
+        }
+
+        .contact-right h2 {
+          text-align: center;
+        }
+      }
+    </style>
   </head>
   <body>
-    <section class="contact" id="contact">
+    <header>
       <div class="container">
-        <h2>Let’s Connect</h2>
-        <p class="contact-intro">
-          Have a project in mind, a role you’re hiring for, or just want to say
-          hi?<br />
+        <div class="logo">Codementum <span class="logo-tag">{CM}</span></div>
+        <nav class="nav-center">
+          <a href="index.html">Home</a>
+          <a href="about.html">About</a>
+          <a href="contact.html">Contact</a>
+        </nav>
+        <a href="resume.pdf" class="btn" target="_blank">Download</a>
+      </div>
+    </header>
+
+    <section class="contact-section">
+      <div class="contact-left">
+        <h1>Let’s Collaborate</h1>
+        <p>
+          Have a project, a question, or just want to say hi? <br />
           I’d love to hear from you.
         </p>
-
-        <form
-          action="https://formspree.io/f/YOUR_ID"
-          method="POST"
-          class="contact-form"
-        >
-          <label for="name">Name</label>
-          <input type="text" id="name" name="name" required />
-
-          <label for="email">Email</label>
-          <input type="email" id="email" name="_replyto" required />
-
-          <label for="message">Message</label>
-          <textarea id="message" name="message" rows="5" required></textarea>
-
-          <button type="submit">Send Message</button>
+      </div>
+      <div class="contact-right">
+        <h2>Say Hello</h2>
+        <form action="https://formspree.io/f/xrblozly" method="POST">
+          <input type="text" name="name" placeholder="Your name" required />
+          <input type="text" name="company" placeholder="Company (optional)" />
+          <input
+            type="email"
+            name="email"
+            placeholder="Email address"
+            required
+          />
+          <input type="text" name="subject" placeholder="Subject" required />
+          <textarea
+            name="message"
+            placeholder="Start typing here..."
+            required
+          ></textarea>
+          <button type="submit">Submit →</button>
         </form>
-
-        <div class="contact-details">
-          <p>
-            <strong>Email:</strong>
-            <a href="mailto:chelsea@example.com">chelsea@example.com</a>
-          </p>
-          <p>
-            <strong>LinkedIn:</strong>
-            <a href="https://linkedin.com/in/chelseawatson" target="_blank"
-              >linkedin.com/in/chelseawatson</a
-            >
-          </p>
-          <p>
-            <strong>GitHub:</strong>
-            <a href="https://github.com/chelsea-dev" target="_blank"
-              >github.com/chelsea-dev</a
-            >
-          </p>
-        </div>
       </div>
     </section>
   </body>
