made style changes to input form

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <main class="container">
       <!--  Cards -->
       <div class="sound-cards">
-        <div class="card active">
+        <div class="card">
           <h2>Fireplace</h2>
           <div class="player"></div>
         </div>
