uploaded visual work, made structural adjustments to about page

--- a/index.html
+++ b/index.html
@@ -37,17 +37,17 @@
       <!--  Cards -->
       <div class="sound-cards">
         <div class="card">
-          <h2>Fireplace</h2>
+          <h2>Mobile App</h2>
           <div class="player"></div>
         </div>
         <div class="card">
-          <h2>Forest</h2>
+          <h2>PNW Surf</h2>
         </div>
         <div class="card">
-          <h2>Night</h2>
+          <h2>Forecast</h2>
         </div>
-        <div class="card">
-          <h2>Ocean</h2>
+        <div class="card" onclick="window.location.href='visuals.html'">
+          <h2>Visual Work</h2>
         </div>
       </div>
 
