updated about me

--- a/about.html
+++ b/about.html
@@ -45,8 +45,8 @@
           </p>
           <p>
             When I’m not coding, I’m probably wandering around the Pacific
-            Northwest, snowboarding, or sketching up my next project. Let’s
-            build something cool together.
+            Northwest, snowboarding, skateboarding, or sketching up my next
+            project. Let’s build something cool together.
           </p>
           <p>swewatson@gmail.com</p>
           <div class="social-icons">
