--- a/index.html
+++ b/index.html
@@ -40,7 +40,10 @@
           <h2>Mobile App</h2>
           <div class="player"></div>
         </div>
-        <div class="card">
+        <div
+          class="card"
+          onclick="window.open('https://pnw-surf.netlify.app', '_blank')"
+        >
           <h2>PNW Surf</h2>
         </div>
         <div class="card">
