--- a/contact.html
+++ b/contact.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contact | Codementum</title>
+    <title>Contact | TrailheadDev</title>
     <link rel="stylesheet" href="contact.css" />
   </head>
   <body>
     <header>
       <div class="container">
-        <div class="logo">Codementum <span class="logo-tag">{CM}</span></div>
+        <div class="logo">TrailheadDev <span class="logo-tag">{TD}</span></div>
         <nav class="nav-center">
           <a href="index.html">Home</a>
           <a href="about.html">About</a>
