--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Codementum {CM}</title>
+    <title>TrailheadDev {TD}</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <!-- Header -->
     <header>
       <div class="container header-container">
-        <div class="logo">Codementum<span class="logo-tag"> {CM}</span></div>
+        <div class="logo">TrailheadDev<span class="logo-tag"> {TD}</span></div>
 
         <nav class="nav-center">
           <a href="index.html">Home</a>
