--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About – Codementum</title>
+    <title>About – TrailheadDev</title>
     <link rel="stylesheet" href="about.css" />
     <link
       rel="stylesheet"
@@ -13,7 +13,7 @@
   <body class="about-page">
     <header>
       <div class="container">
-        <div class="logo">Codementum <span class="logo-tag">{CM}</span></div>
+        <div class="logo">TrailheadDev <span class="logo-tag">{TD}</span></div>
         <nav class="nav-center">
           <a href="index.html">Home</a>
           <a href="about.html">About</a>
