added coming soon to work

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
       <div class="sound-cards">
         <div class="card">
           <h2>Mobile App</h2>
+          <h5>Coming soon...</h5>
           <div class="player"></div>
         </div>
         <div
@@ -45,9 +46,11 @@
           onclick="window.open('https://pnw-surf.netlify.app', '_blank')"
         >
           <h2>PNW Surf</h2>
+          <h5>Coming soon...</h5>
         </div>
         <div class="card">
           <h2>Forecast</h2>
+          <h5>Coming soon...</h5>
         </div>
         <div class="card" onclick="window.location.href='visuals.html'">
           <h2>Visual Work</h2>
