added mood journal site

--- a/index.html
+++ b/index.html
@@ -36,20 +36,21 @@
     <main class="container">
       <!--  Cards -->
       <div class="sound-cards">
-        <div class="card">
-          <h2>Mobile App</h2>
-          <h5>Coming soon...</h5>
+        <div
+          class="card"
+          onclick="window.open('https://swewatson.github.io/MoodJournal')"
+        >
+          <h2>HueNotes</h2>
           <div class="player"></div>
         </div>
         <div
           class="card"
-          onclick="window.open('https://pnw-surf.netlify.app', '_blank')"
+          onclick="window.open('https://swewatson.github.io/cider_landing.page/index.html')"
         >
-          <h2>PNW Surf</h2>
-          <h5>Coming soon...</h5>
+          <h2>Fruity Cider</h2>
         </div>
         <div class="card">
-          <h2>Forecast</h2>
+          <h2>Mobile App</h2>
           <h5>Coming soon...</h5>
         </div>
         <div class="card" onclick="window.location.href='visuals.html'">
